# AgentPlanner

./: AGENTS.md  antigravity.md
.github/: copilot-instructions.md
mcp-server-rust/: CHANGELOG.md  Cargo.toml
mcp-server-rust/src/: cli.rs  server.rs  sync.rs
src/components/kanban/: board.tsx  column.tsx  dashboard-status-section.tsx  task-card.tsx
src/components/modals/: agent-instructions-modal.tsx  connect-mcp-modal.tsx
src/domains/agent-control/: types.ts
src/domains/agent-instruction/: instruction-routing.ts
src/domains/agent-instruction/__tests__/: instruction-routing.test.ts
src/domains/setup-token/: types.ts
